--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "nextcraft/locale",
+    "description": "Locale is the module that provides all the translations",
     "type": "project",
     "autoload": {
         "psr-4": {
