--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "nextcraft/locale",
     "description": "Locale is the module that provides all the translations",
-    "type": "project",
+    "type": "library",
     "autoload": {
         "psr-4": {
             "\\": "src/"
