--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,6 @@
             "email": "josscoder@hotmail.com"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "require": {}
 }
